Sat Jan 23 13:09:03 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htmerge/htmerge.cc: Unlink the db.docs.index file before we
	build it again. This ensures we have a clean copy and don't
	duplicate URLs.

Fri Jan 22 23:12:12 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* include/htconfig.h.in: Cleaned up preprocessor definitions.

	* configure.in, configure: Fix NEED_PROTO_GETHOSTNAME check and
	make check for GETPEERNAME_LENGTH_T more flexible.

	* htlib/Connection.cc: Change __sun__ to NEED_PROTO_GETHOSTNAME
	since we prefer feature tests.

Sat Jan 23 02:38:08 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htsearch/Display.cc (logSearch): Fix simple typo in last change.

Sat Jan 23 01:18:05 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htlib/String.cc (operator =): Add const modifier: const String &.
	* htlib/htString.h (String::operator=(const String &)): Ditto.

	* htlib/DB2_db.h (class DB2_db): Make Put(), Get(), Exists() and
	Delete() use const modifiers on appropriate parameters.
	* htlib/DB2_db.cc: Ditto.
	* htlib/GDBM_db.h (class GDBM_db): Ditto.
	* htlib/GDBM_db.cc: Ditto.
	* htlib/Database.h (class Database): Ditto.
	* htlib/Database.cc (Put): Similar.

	* htlib/BTree.h (class BTree): Make Put(), Get() and Exists() use
	const modifiers on appropriate parameters.
	* htlib/BTree.cc: Ditto.

	* htcommon/DocumentDB.cc (Add, operator[], Exists, Delete): Remove
	needless temporary String.
	* htcommon/DocumentRef.cc (Deserialize): Ditto.

Fri Jan 22 21:10:12 1999   Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* htlib/Configuration.cc: Add support for keyword "include" to
	include other config files.

	* htdoc/cf_general.html: Document it.

Thu Jan 21 23:25:37 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc(logSearch): Check if HTTP_REFERER is NULL,
	if so, use a dash. (Otherwise we'll kill some syslog() services).

Thu Jan 21 05:30:40 1999  Hans-Peter Nilsson  <hp@axis.se>
