@@ -1,3 +1,9 @@
+Sat Jan 23 22:18:18 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
+
+	* htdig/Retriever.cc(parse_url): If a server ignores the
+	If-Modified-Since request, still compare the retrieved date to the
+	stored date to see if it has been modified.
+
 Sat Jan 23 13:09:03 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* htmerge/htmerge.cc: Unlink the db.docs.index file before we
